package service

import (
	"context"

	restaurantpb "github.com/consumer-order-prediction/pkg/proto/restaurant"
)


func (s *Service) AddRestaurant(ctx context.Context, req *restaurantpb.AddRestaurantRequest) (*restaurantpb.AddRestaurantResponse, error) {


	return nil,nil
}

func (s *Service) GetAllRestaurant(ctx context.Context, req *restaurantpb.GetAllRestaurantRequest) (*restaurantpb.GetAllRestaurantResponse, error) {


	return nil,nil
}

func (s *Service) GetSpecificRestaurant(ctx context.Context, req *restaurantpb.GetSpecificRestaurantRequest) (*restaurantpb.GetSpecificRestaurantResponse, error) {


	return nil,nil
}


func (s *Service) AddRestaurantItem(ctx context.Context, req *restaurantpb.AddRestaurantItemRequest) (*restaurantpb.AddRestaurantItemResponse, error) {


	return nil,nil
}

func (s *Service) UpdateRestaurantItem(ctx context.Context, req *restaurantpb.UpdateRestaurantItemRequest) (*restaurantpb.UpdateRestaurantItemResponse, error) {


	return nil,nil
}

func (s *Service) DeleteItem(ctx context.Context, req *restaurantpb.DeleteItemRequest) (*restaurantpb.DeleteItemResponse, error) {


	return nil,nil
}

func (s *Service) GetAllItems(ctx context.Context, req *restaurantpb.GetAllItemsRequest) (*restaurantpb.GetAllItemsResponse, error) {


	return nil,nil
}


func (s *Service) GetSpecificItem(ctx context.Context, req *restaurantpb.GetSpecificItemRequest) (*restaurantpb.GetSpecificItemResponse, error) {


	return nil,nil
}